kubernetes/szilardshome/temp/my-apps/media/qbittorrent/httproute-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-external-webui-route
  namespace: qbittorrent
spec:
  parentRefs:
    - name: traefik-external
      namespace: traefik-external
  hostnames:
    - "qbittorrent2.szilardshome.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
          weight: 1
