kubernetes/szilardshome/temp/my-apps/media/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-internal-webui-route
  namespace: qbittorrent
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "10.10.4.60"
spec:
  parentRefs:
    - name: traefik-internal
      namespace: traefik-internal
  hostnames:
    - "qbittorrent.internal.szilardshome.com" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
          weight: 1
